# one_line_lidar_camera_fusion

./: demo_video.mkv  readme.md  单线激光测距.docx
src/one_line_lidar_camera_fusion/: CMakeLists.txt  package.xml
src/one_line_lidar_camera_fusion/config/: Pitch_Yaw_Roll.txt  T.txt
src/one_line_lidar_camera_fusion/launch/: one_line_lidar_camera_fusion.launch
src/one_line_lidar_camera_fusion/msg/: BoundingBoxWithDist.msg  BoundingBoxesWithDist.msg
src/one_line_lidar_camera_fusion/src/: lidar_camera_fusion_node.cpp  my_structure.h  single_line_projection.cpp  single_line_projection.h
src/perception_msgs (copy)/: CmakeList.txt
src/perception_msgs (copy)/msg/: LidarObstacle.msg  LidarObstacles.msg
